# bindle-server-azure

./: Cargo.toml  README.md
.github/workflows/: release.yaml  rust.yaml
src/: main.rs
src/storage/: mod.rs
